--- a/notebook/tutorial.ipynb
+++ b/notebook/tutorial.ipynb
@@ -1517,7 +1517,10 @@
     "pip install jupyter_nbextensions_configurator\n",
     "\n",
     "\n",
-    "jupyter nbextensions_configurator enable --user"
+    "jupyter nbextensions_configurator enable --user\n",
+    "\n",
+    "\n",
+    "jupyter notebook --notebook-dir=D:/"
    ]
   },
   {
@@ -3831,7 +3834,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -3840,7 +3843,7 @@
        "'/Users/phuong/Documents/projects/CASED/my_projects/mlop_beta/mlop_beta'"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3863,7 +3866,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -3881,68 +3884,68 @@
       "  $ xcode-select --install\n",
       "  $ pip install watchdog\n",
       "            \u001b[0m\n",
-      "2022-07-06 23:27:28.166 Traceback (most recent call last):\n",
+      "2022-07-07 21:55:22.925 Traceback (most recent call last):\n",
       "  File \"/Users/phuong/anaconda3/lib/python3.6/site-packages/streamlit/script_runner.py\", line 354, in _run_script\n",
       "    exec(code, module.__dict__)\n",
-      "  File \"/Users/phuong/Documents/projects/CASED/my_projects/mlop_beta/mlop_beta/app.py\", line 60, in <module>\n",
+      "  File \"/Users/phuong/Documents/projects/CASED/my_projects/mlop_beta/mlop_beta/model_deployment.py\", line 60, in <module>\n",
       "    main()\n",
-      "  File \"/Users/phuong/Documents/projects/CASED/my_projects/mlop_beta/mlop_beta/app.py\", line 56, in main\n",
+      "  File \"/Users/phuong/Documents/projects/CASED/my_projects/mlop_beta/mlop_beta/model_deployment.py\", line 56, in main\n",
       "    st.success('The output is %.4f'%(result))\n",
       "TypeError: must be real number, not str\n",
       "\n",
-      "2022-07-06 23:27:33.945 Traceback (most recent call last):\n",
+      "2022-07-07 21:58:07.210 Traceback (most recent call last):\n",
       "  File \"/Users/phuong/anaconda3/lib/python3.6/site-packages/streamlit/script_runner.py\", line 354, in _run_script\n",
       "    exec(code, module.__dict__)\n",
-      "  File \"/Users/phuong/Documents/projects/CASED/my_projects/mlop_beta/mlop_beta/app.py\", line 60, in <module>\n",
+      "  File \"/Users/phuong/Documents/projects/CASED/my_projects/mlop_beta/mlop_beta/model_deployment.py\", line 60, in <module>\n",
       "    main()\n",
-      "  File \"/Users/phuong/Documents/projects/CASED/my_projects/mlop_beta/mlop_beta/app.py\", line 56, in main\n",
+      "  File \"/Users/phuong/Documents/projects/CASED/my_projects/mlop_beta/mlop_beta/model_deployment.py\", line 56, in main\n",
       "    st.success('The output is %.4f'%(result))\n",
       "TypeError: must be real number, not str\n",
       "\n",
-      "2022-07-06 23:27:35.408 Traceback (most recent call last):\n",
+      "2022-07-07 21:58:09.347 Traceback (most recent call last):\n",
       "  File \"/Users/phuong/anaconda3/lib/python3.6/site-packages/streamlit/script_runner.py\", line 354, in _run_script\n",
       "    exec(code, module.__dict__)\n",
-      "  File \"/Users/phuong/Documents/projects/CASED/my_projects/mlop_beta/mlop_beta/app.py\", line 60, in <module>\n",
+      "  File \"/Users/phuong/Documents/projects/CASED/my_projects/mlop_beta/mlop_beta/model_deployment.py\", line 60, in <module>\n",
       "    main()\n",
-      "  File \"/Users/phuong/Documents/projects/CASED/my_projects/mlop_beta/mlop_beta/app.py\", line 56, in main\n",
+      "  File \"/Users/phuong/Documents/projects/CASED/my_projects/mlop_beta/mlop_beta/model_deployment.py\", line 56, in main\n",
       "    st.success('The output is %.4f'%(result))\n",
       "TypeError: must be real number, not str\n",
       "\n",
-      "2022-07-06 23:27:37.932 Traceback (most recent call last):\n",
+      "2022-07-07 21:58:14.336 Traceback (most recent call last):\n",
       "  File \"/Users/phuong/anaconda3/lib/python3.6/site-packages/streamlit/script_runner.py\", line 354, in _run_script\n",
       "    exec(code, module.__dict__)\n",
-      "  File \"/Users/phuong/Documents/projects/CASED/my_projects/mlop_beta/mlop_beta/app.py\", line 60, in <module>\n",
+      "  File \"/Users/phuong/Documents/projects/CASED/my_projects/mlop_beta/mlop_beta/model_deployment.py\", line 60, in <module>\n",
       "    main()\n",
-      "  File \"/Users/phuong/Documents/projects/CASED/my_projects/mlop_beta/mlop_beta/app.py\", line 56, in main\n",
+      "  File \"/Users/phuong/Documents/projects/CASED/my_projects/mlop_beta/mlop_beta/model_deployment.py\", line 56, in main\n",
       "    st.success('The output is %.4f'%(result))\n",
       "TypeError: must be real number, not str\n",
       "\n",
-      "2022-07-06 23:27:42.113 Traceback (most recent call last):\n",
+      "2022-07-07 21:58:16.209 Traceback (most recent call last):\n",
       "  File \"/Users/phuong/anaconda3/lib/python3.6/site-packages/streamlit/script_runner.py\", line 354, in _run_script\n",
       "    exec(code, module.__dict__)\n",
-      "  File \"/Users/phuong/Documents/projects/CASED/my_projects/mlop_beta/mlop_beta/app.py\", line 60, in <module>\n",
+      "  File \"/Users/phuong/Documents/projects/CASED/my_projects/mlop_beta/mlop_beta/model_deployment.py\", line 60, in <module>\n",
       "    main()\n",
-      "  File \"/Users/phuong/Documents/projects/CASED/my_projects/mlop_beta/mlop_beta/app.py\", line 56, in main\n",
+      "  File \"/Users/phuong/Documents/projects/CASED/my_projects/mlop_beta/mlop_beta/model_deployment.py\", line 56, in main\n",
       "    st.success('The output is %.4f'%(result))\n",
       "TypeError: must be real number, not str\n",
       "\n",
-      "2022-07-06 23:27:45.134 Traceback (most recent call last):\n",
+      "2022-07-07 21:58:18.799 Traceback (most recent call last):\n",
       "  File \"/Users/phuong/anaconda3/lib/python3.6/site-packages/streamlit/script_runner.py\", line 354, in _run_script\n",
       "    exec(code, module.__dict__)\n",
-      "  File \"/Users/phuong/Documents/projects/CASED/my_projects/mlop_beta/mlop_beta/app.py\", line 60, in <module>\n",
+      "  File \"/Users/phuong/Documents/projects/CASED/my_projects/mlop_beta/mlop_beta/model_deployment.py\", line 60, in <module>\n",
       "    main()\n",
-      "  File \"/Users/phuong/Documents/projects/CASED/my_projects/mlop_beta/mlop_beta/app.py\", line 56, in main\n",
+      "  File \"/Users/phuong/Documents/projects/CASED/my_projects/mlop_beta/mlop_beta/model_deployment.py\", line 56, in main\n",
       "    st.success('The output is %.4f'%(result))\n",
       "TypeError: must be real number, not str\n",
       "\n",
-      "[0.4983188]\n",
+      "[0.49663769]\n",
       "^C\n",
       "\u001b[34m  Stopping...\u001b[0m\n"
      ]
     }
    ],
    "source": [
-    "!streamlit run app.py"
+    "!streamlit run model_deployment.py"
    ]
   },
   {
